@@ -1,7 +1,10 @@
 DarkRP 2.4.1 SVN
 [ADD] Group ownable doors
+[ADD] rp_startingmoney
+[ADD] rp_copscanunweld
 [FIX] // not working in letters
 [FIX] Disabling RP names not working clientside
+[FIX] Weapon checker resetting ammo
 [REMOVE] ALL NWVars in doors, players and custom entities (shipments, druglabs etc.) DarkRP now has LESS NWVars than sandbox!
 
 DarkRP 2.4.1
